--- a/delivery/kustomize/base/deployment-entry.yaml
+++ b/delivery/kustomize/base/deployment-entry.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/name: podtato-head
     app.kubernetes.io/component: entry
-    app.kubernetes.io/version: '0.2.1'
+    app.kubernetes.io/version: '0.2.7'
     app.kubernetes.io/managed-by: kustomize
 spec:
   replicas: 1
@@ -24,7 +24,7 @@ spec:
       serviceAccountName: podtato-head
       containers:
         - name: podtato-head-entry
-          image: ghcr.io/podtato-head/entry:0.2.1
+          image: ghcr.io/podtato-head/entry:0.2.7
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
@@ -44,3 +44,12 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.name
+          - name: SERVICES_CONFIG_FILE_PATH
+            value: /config/servicesConfig.yaml
+          volumeMounts:
+            - name: service-discovery-map
+              mountPath: /config
+      volumes:
+        - name: service-discovery-map
+          configMap:
+              name: podtato-head-service-discovery
