--- a/.github/workflows/microservices-release.yaml
+++ b/.github/workflows/microservices-release.yaml
@@ -73,7 +73,7 @@ jobs:
           fetch-depth: 0
       - name: Apply new git tag
         run: |
-          source ./podtato-head-microservices/build/version.sh
+          source ./scripts/repo_version.sh
           version=$(version_to_use)
           echo "INFO: will tag commit as: ${version}"
           git tag -f "${version}"
