--- a/delivery/chart/values.yaml
+++ b/delivery/chart/values.yaml
@@ -86,12 +86,15 @@ securityContext: {}
 # applies to podtato-head-entry deployment only
 ingress:
   enabled: false
+  className: ""
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
-      paths: []
+      #paths: []
+      paths: 
+        - path: /
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
