--- a/delivery/kubectl/manifest.yaml
+++ b/delivery/kubectl/manifest.yaml
@@ -23,7 +23,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: ghcr.io/podtato-head/entry:0.2.7
+        image: ghcr.io/podtato-head/entry:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 9000
@@ -69,7 +69,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image:  ghcr.io/podtato-head/hat:0.2.7
+          image:  ghcr.io/podtato-head/hat:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 9000
@@ -113,7 +113,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image:  ghcr.io/podtato-head/left-leg:0.2.7
+          image:  ghcr.io/podtato-head/left-leg:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 9000
@@ -157,7 +157,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image:  ghcr.io/podtato-head/left-arm:0.2.7
+          image:  ghcr.io/podtato-head/left-arm:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 9000
@@ -201,7 +201,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image:  ghcr.io/podtato-head/right-leg:0.2.7
+          image:  ghcr.io/podtato-head/right-leg:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 9000
@@ -245,7 +245,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image:  ghcr.io/podtato-head/right-arm:0.2.7
+          image:  ghcr.io/podtato-head/right-arm:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 9000
