--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-export GITHUB_USER=${GITHUB_USER}
+# altering 'GITHUB_USER' variable using parameter expansion ",," in bash to be all lowercase since repo URLs must be all lowercase
+export GITHUB_USER=${GITHUB_USER,,}
 export GITHUB_TOKEN=${GITHUB_TOKEN}
 export GITHUB_REPO=${GITHUB_REPO}
 export IMAGE_REPO=${IMAGE_REPO}
