--- a/podtato-head-microservices/cmd/entry/Dockerfile
+++ b/podtato-head-microservices/cmd/entry/Dockerfile
@@ -1,5 +1,6 @@
 FROM docker.io/library/golang:latest AS builder
 ARG GITHUB_USER=podtato-head
+ARG BASE_RUN_IMAGE=scratch
 LABEL org.opencontainers.image.source = "https://github.com/${GITHUB_USER}/podtato-head"
 
 ENV GO111MODULE=on \
@@ -14,8 +15,9 @@ RUN go mod download
 COPY . .
 RUN go build -o entry ./cmd/entry
 
-
-FROM scratch
+# must redeclare ARG within build
+ARG BASE_RUN_IMAGE
+FROM ${BASE_RUN_IMAGE}
 ARG GITHUB_USER=podtato-head
 LABEL org.opencontainers.image.source = "https://github.com/${GITHUB_USER}/podtato-head"
 
