--- a/podtato-head-server/docker/DockerfileV0.1.2
+++ b/podtato-head-server/docker/DockerfileV0.1.2
@@ -1,5 +1,6 @@
 FROM library/golang:latest AS builder
 ARG GITHUB_USER=podtato-head
+ARG BASE_RUN_IMAGE=scratch
 LABEL org.opencontainers.image.source = "https://github.com/${GITHUB_USER}/podtato-head"
 
 # Set necessary environment variables needed for our image
@@ -23,7 +24,8 @@ COPY . .
 RUN go build -o podtatoserver ./main.go
 
 # Build a small image
-FROM scratch
+ARG BASE_RUN_IMAGE
+FROM ${BASE_RUN_IMAGE}
 
 COPY --from=builder /build/podtatoserver /
 COPY /static  /static
