--- a/podtato-head-microservices/cmd/entry/Dockerfile
+++ b/podtato-head-microservices/cmd/entry/Dockerfile
@@ -1,6 +1,7 @@
+ARG BASE_RUN_IMAGE=scratch
 FROM docker.io/library/golang:latest AS builder
 ARG GITHUB_USER=podtato-head
-LABEL org.opencontainers.image.source = "https://github.com/${GITHUB_USER}/podtato-head"
+LABEL org.opencontainers.image.source "https://github.com/${GITHUB_USER}/podtato-head"
 
 ENV GO111MODULE=on \
     CGO_ENABLED=0
@@ -14,10 +15,11 @@ RUN go mod download
 COPY . .
 RUN go build -o entry ./cmd/entry
 
-
-FROM scratch
+# must redeclare ARG within build
+ARG BASE_RUN_IMAGE
+FROM ${BASE_RUN_IMAGE}
 ARG GITHUB_USER=podtato-head
-LABEL org.opencontainers.image.source = "https://github.com/${GITHUB_USER}/podtato-head"
+LABEL org.opencontainers.image.source "https://github.com/${GITHUB_USER}/podtato-head"
 
 COPY --from=builder /build/entry /entry
 
