--- a/.github/workflows/microservices-build-test.yaml
+++ b/.github/workflows/microservices-build-test.yaml
@@ -40,6 +40,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          install: true
+          version: latest
       - name: Build and push images
         run: make push-microservices-images 
 
